--- a/atri_app/app/src/custom/Home/Custom.css
+++ b/atri_app/app/src/custom/Home/Custom.css
@@ -9,7 +9,9 @@
 .TextBox40,
 .TextBox42,
 .TextBox43,
-.TextBox90{
+.TextBox90,
+.TextBox125,
+.TextBox133{
     background-image: linear-gradient(108deg, #b16cea 8%, #ff5e69 40%, #ff8a56 77%, #ffa84b 91%);
 }
 .TextBox2,
@@ -21,7 +23,9 @@
 .TextBox40,
 .TextBox42,
 .TextBox43,
-.TextBox90{
+.TextBox90,
+.TextBox125,
+.TextBox133{
     background-clip: text;
     -webkit-text-fill-color: transparent;
 }
@@ -41,11 +45,16 @@
 .TextBox40,
 .TextBox42,
 .TextBox43,
-.TextBox90{
+.TextBox90,
+.TextBox125,
+.TextBox133{
     letter-spacing: 4px;
 }
 .Flex44{
     right: 5%;
+}
+.Div207{
+    right: 4%;
 }
 
 .Div119,
@@ -54,4 +63,9 @@
 .Div145,
 .Div151{
     border-bottom: 1px solid hsla(0, 0%, 100%, 0.3);
+}
+
+.Div197{
+    filter: saturate(0%);
+    -webkit-filter: saturate(0%);
 }
