some edit feature

--- a/atri_app/app/src/page-css/Home.css
+++ b/atri_app/app/src/page-css/Home.css
@@ -381,6 +381,7 @@ justify-content: center;
 background-color: #ffffff;
 width: ;
 min-width: 40%;
+cursor: pointer;
 }
 .p-Home.Div79 {
 padding-top: 32px;
@@ -411,6 +412,7 @@ justify-content: center;
 background-color: #ffffff;
 width: ;
 min-width: 40%;
+cursor: pointer;
 }
 .p-Home.Div95 {
 padding-top: 32px;
@@ -441,6 +443,7 @@ justify-content: center;
 background-color: #ffffff;
 width: ;
 min-width: 40%;
+cursor: pointer;
 }
 .p-Home.Div99 {
 padding-top: 32px;
@@ -471,6 +474,7 @@ justify-content: center;
 background-color: #ffffff;
 width: ;
 min-width: 40%;
+cursor: pointer;
 }
 .p-Home.Div103 {
 padding-top: 32px;
@@ -501,6 +505,7 @@ justify-content: center;
 background-color: #ffffff;
 width: ;
 min-width: 40%;
+cursor: pointer;
 }
 .p-Home.Div107 {
 padding-top: 32px;
@@ -534,6 +539,7 @@ position: absolute;
 background-color: #ffffff;
 bottom: 0;
 z-index: 3;
+cursor: pointer;
 }
 .p-Home.Div110 {
 display: block;
@@ -554,6 +560,7 @@ background-color: #ffffff;
 bottom: 0;
 right: 0;
 z-index: 4;
+cursor: pointer;
 }
 .p-Home.Div112 {
 display: inline-block;
@@ -617,6 +624,7 @@ display: block;
 .p-Home.Div154 {
 display: block;
 box-sizing: border-box;
+cursor: pointer;
 }
 .p-Home.Div118 {
 display: inline-block;
@@ -636,6 +644,7 @@ box-sizing: border-box;
 display: block;
 margin-bottom: 65px;
 padding-bottom: 30px;
+cursor: pointer;
 }
 .p-Home.Flex47 {
 display: flex;
@@ -675,6 +684,7 @@ width: 90%;
 display: block;
 margin-bottom: 65px;
 padding-bottom: 30px;
+cursor: pointer;
 }
 .p-Home.Div131 {
 display: block;
@@ -714,6 +724,7 @@ align-items: center;
 display: block;
 margin-bottom: 65px;
 padding-bottom: 30px;
+cursor: pointer;
 }
 .p-Home.Div137 {
 display: block;
@@ -753,6 +764,7 @@ align-items: center;
 display: block;
 margin-bottom: 65px;
 padding-bottom: 30px;
+cursor: pointer;
 }
 .p-Home.Div143 {
 display: block;
@@ -792,6 +804,7 @@ align-items: center;
 display: block;
 margin-bottom: 65px;
 padding-bottom: 30px;
+cursor: pointer;
 }
 .p-Home.Div149 {
 display: block;
@@ -945,6 +958,7 @@ border-radius: ;
 border-bottom-color: #e5e5e5ff;
 border-bottom-style: solid;
 border-bottom-width: 1px;
+cursor: pointer;
 }
 .p-Home.Div165 {
 ;
@@ -963,6 +977,7 @@ border-radius: ;
 border-bottom-color: #e5e5e5ff;
 border-bottom-style: solid;
 border-bottom-width: 1px;
+cursor: pointer;
 }
 .p-Home.Div167 {
 margin-left: 20px;
@@ -981,6 +996,7 @@ border-radius: ;
 border-bottom-color: #e5e5e5;
 border-bottom-style: solid;
 border-bottom-width: 1px;
+cursor: pointer;
 }
 .p-Home.Div169 {
 margin-left: 20px;
@@ -1003,6 +1019,7 @@ border-radius: ;
 border-bottom-color: #e5e5e5;
 border-bottom-style: solid;
 border-bottom-width: 1px;
+cursor: pointer;
 }
 .p-Home.Div175 {
 margin-left: 20px;
@@ -1034,6 +1051,7 @@ border-radius: ;
 border-bottom-color: #e5e5e5;
 border-bottom-style: solid;
 border-bottom-width: 1px;
+cursor: pointer;
 }
 .p-Home.Flex70 {
 display: flex;
@@ -1061,6 +1079,7 @@ border-radius: ;
 border-bottom-color: #e5e5e5;
 border-bottom-style: solid;
 border-bottom-width: 1px;
+cursor: pointer;
 }
 .p-Home.Flex72 {
 display: flex;
@@ -1161,6 +1180,7 @@ justify-content: center;
 width: 54px;
 height: 54px;
 background-color: #000000;
+cursor: pointer;
 }
 .p-Home.Div208 {
 position: static;
@@ -1178,6 +1198,7 @@ justify-content: center;
 width: 54px;
 height: 54px;
 background-color: #000000;
+cursor: pointer;
 }
 .p-Home.Div207 {
 position: static;
@@ -1255,6 +1276,7 @@ margin-bottom: ;
 width: 100%;
 align-items: center;
 justify-content: space-between;
+cursor: pointer;
 }
 .p-Home.Div216 {
 width: 24px;
@@ -1291,6 +1313,7 @@ margin-bottom: ;
 width: 100%;
 align-items: center;
 justify-content: space-between;
+cursor: pointer;
 }
 .p-Home.Div218 {
 width: 24px;
@@ -1309,6 +1332,7 @@ margin-bottom: ;
 width: 100%;
 align-items: center;
 justify-content: space-between;
+cursor: pointer;
 }
 .p-Home.Div221 {
 width: 24px;
@@ -1336,6 +1360,7 @@ margin-bottom: ;
 width: 100%;
 align-items: center;
 justify-content: space-between;
+cursor: pointer;
 }
 .p-Home.Div224 {
 width: 24px;
@@ -1379,6 +1404,7 @@ margin-bottom: ;
 width: 100%;
 align-items: center;
 justify-content: space-between;
+cursor: pointer;
 }
 .p-Home.Div240 {
 width: 24px;
@@ -1406,6 +1432,7 @@ margin-bottom: ;
 width: 100%;
 align-items: center;
 justify-content: space-between;
+cursor: pointer;
 }
 .p-Home.Div241 {
 width: 24px;
@@ -1424,6 +1451,7 @@ margin-bottom: ;
 width: 100%;
 align-items: center;
 justify-content: space-between;
+cursor: pointer;
 }
 .p-Home.Div242 {
 width: 24px;
@@ -1460,6 +1488,7 @@ margin-bottom: ;
 width: 100%;
 align-items: center;
 justify-content: space-between;
+cursor: pointer;
 }
 .p-Home.Div243 {
 width: 24px;
@@ -1609,7 +1638,7 @@ justify-content: space-between;
 column-gap: 100px;
 row-gap: ;
 }
-.p-Home.Flex110 {
+.p-Home.FixedLink {
 display: inline-flex;
 align-items: center;
 justify-content: center;
@@ -1631,6 +1660,7 @@ border-color: transparent;
 width: 100%;
 height: 100%;
 align-self: center;
+cursor: pointer;
 }
 .p-Home.Button1 {
 color: #000000;
@@ -2599,19 +2629,23 @@ font-weight: 600;
 .p-Home.Image49 {
 width: 100%;
 height: 100%;
+cursor: pointer;
 }
 .p-Home.Image50 {
 width: 100%;
 height: 100%;
 min-height: ;
+cursor: pointer;
 }
 .p-Home.Image51 {
 width: 100%;
 height: 100%;
+cursor: pointer;
 }
 .p-Home.Image52 {
 width: 100%;
 height: 100%;
+cursor: pointer;
 }
 .p-Home.TextBox93 {
 font-family: IBM Plex Sans;
@@ -3070,25 +3104,29 @@ font-weight: 700;
 line-height: 110%;
 }
 .p-Home.TextBox178 {
-;
+padding-right: 2px;
 }
 .p-Home.TextBox179 {
 cursor: pointer;
 }
 .p-Home.TextBox180 {
-;
+padding-right: 2px;
 }
 .p-Home.TextBox181 {
 cursor: pointer;
+padding-right: 2px;
 }
 .p-Home.TextBox182 {
 cursor: pointer;
+padding-right: 2px;
 }
 .p-Home.TextBox183 {
 cursor: pointer;
+padding-right: 2px;
 }
 .p-Home.TextBox184 {
 cursor: pointer;
+padding-right: 2px;
 }
 .p-Home.TextBox185 {
 cursor: pointer;
