--- a/atri_app/app/src/custom/Home/Custom.css
+++ b/atri_app/app/src/custom/Home/Custom.css
@@ -38,6 +38,6 @@
 a{
     text-decoration: none;
 }
-.Flex110{
+.FixedLink{
     box-shadow: 0 0 0 1px rgb(0 0 0 / 10%), 0 1px 3px rgb(0 0 0 / 10%);
 }
